--- a/index.html
+++ b/index.html
@@ -25,25 +25,11 @@
             <div class="popup">
                 <h1>Donate</h1>
                 <p align="center">
-                    <h3><span class="font-size=larger">By donating, you are supporting a dumbass that barely knows how to build a ROM.</span></h3>                    
+                    <h3><span class="font-size=larger">By donating, you are supporting the #GaysShouldRotInHell movement.</span></h3>                    
                     <h2>Select payment method</h2>
                     <p align="center">
                         <input type="button" class="btn" value="ZaloPay" onclick="location.href='https://zalo.me/umokcau'">
                     </p>                    <p align="center"><input class="btn" type="button" value="Close" title="Close" onclick="document.getElementById('donate').style.display='none';"></p>
-                </p>
-            </div>
-        </div>
-        <div id="gitlink">
-            <div class="popup">
-                <h1>Git</h1>
-                <p align="center">
-                    <h3><span class="font-size=larger">Не звони сюда больше</span></h3>                    
-                    <h2>Select Git page</h2>
-                    <p align="center">
-                        <input type="button" class="btn" value="Github" onclick="location.href='https://github.com/iNeoony'">
-                        <input type="button" class="btn" value="OpenGays" onclick="location.href='https://github.com/OpenGays'">
-                    </p>
-                    <p align="center"><input class="btn" type="button" value="Close" title="Close" onclick="document.getElementById('gitlink').style.display='none';"></p>
                 </p>
             </div>
         </div>
