--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h2>Links</h2>
             </div>
             <div class="buttons">
-                <a href="javascript://" class="link" onclick="location.href='http://t.me/GengKapakIsTheLoveOfMyLife'">Telegram</a>
+                <a href="javascript://" class="link" onclick="location.href='https://t.me/GengKapakIsTheLoveOfMyLife'">Telegram</a>
                 <a href="javascript://" class="link" onclick="location.href='https://facebook.com/quxng">FB</a>
                 <a href="javascript://" class="link" onclick="location.href='https://tappi.vn/quxng'">Tappi</a>
             </div>
