--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
                 </p>
             </div>
         </div>
+ <div id="donate">
+            <div class="popup">
+                <h1>Telegram groups</h1>
+                <p align="center">
+                    <h3><span class="font-size=larger">I'm very active at these groups.</span></h3>                    
+                    <p align="center">
+                        <input type="button" class="btn" value="TPBNS" onclick="location.href='https://t.me/pruhmemes'">
+<input type="button" class="btn" value="ZaloPay" onclick="location.href='https://t.me/EmmaHangout'">
+                    </p>                    <p align="center"><input class="btn" type="button" value="Close" title="Close" onclick="document.getElementById('donate').style.display='none';"></p>
+                </p>
+            </div>
         <header class="center info">
             <div class="center pizdec">
                 <div class="avatar-container"><img src="assets/images/avatar.png" oncontextmenu="return false;" class="avatar"></div>
