--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h3><span class="font-size=larger">I'm very active at these groups.</span></h3>                    
                     <p align="center">
                         <input type="button" class="btn" value="TPBNS" onclick="location.href='https://t.me/pruhmemes'">
-<input type="button" class="btn" value="ZaloPay" onclick="location.href='https://t.me/EmmaHangout'">
+<input type="button" class="btn" value="EH" onclick="location.href='https://t.me/EmmaHangout'">
                     </p>                    <p align="center"><input class="btn" type="button" value="Close" title="Close" onclick="document.getElementById('donate').style.display='none';"></p>
                 </p>
             </div>
