--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h2>Links</h2>
             </div>
             <div class="buttons">
-                <a href="javascript://" class="link" onclick="document.getElementById('tg').style.display='block'">Groups</a>
+                <a href="javascript://" class="link" onclick="location.href='https://t.me/GengKapakIsTheLoveOfMyLife">TG</a>
                 <a href="javascript://" class="link" onclick="location.href='https://facebook.com/quxng">FB</a>
                 <a href="javascript://" class="link" onclick="location.href='https://tappi.vn/quxng'">Tappi</a>
             </div>
