--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
                 </p>
             </div>
         </div>
+        <header class="center info">
+            <div class="center pizdec">
+                <div class="avatar-container"><img src="assets/images/avatar.png" oncontextmenu="return false;" class="avatar"></div>
+                <h2><span id="name">quxng</span></h2>
+                <hr width="295">
+                <h3><span class="typed">fet</span><span class="typed-cursor">|</span></h3>
+                <hr width="295">
+                <div class="buttons">
+                        <script>
+                            document.currentScript.parentElement.volume = 0.50;
+                        </script>
+                </div>
                 <h2>Links</h2>
             </div>
             <div class="buttons">
