--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta property="og:locale" content="en_EU">
         <meta property="og:description" content="quxng's site">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="assets/favico/eblan.png" type="image/png">
+        <link rel="shortcut icon" href="assets/favico/favico.png" type="image/png">
         <script src="https://sindresorhus.com/devtools-detect/index.js"></script>
         <link rel="stylesheet" href="assets/fonts/gothampro/style.css">
         <link rel="stylesheet" href="assets/vars.css">
