--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <h2>Select payment method</h2>
                     <p align="center">
                         <input type="button" class="btn" value="ZaloPay" onclick="location.href='https://zalo.me/umokcau'">
+						<input type="button" class="btn" value="MoMo" onclick="location.href='https://zalo.me/umokcau'">
                     </p>                    <p align="center"><input class="btn" type="button" value="Close" title="Close" onclick="document.getElementById('donate').style.display='none';"></p>
                 </p>
             </div>
